<resources>
    <string name="app_name">pokedeck</string>

    <!-- Configuration strings -->
    <string name="baseURL" translatable="false">http://pokedeck-deploy.mathieupascobreillot.xyz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registering-->
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>

    <!-- Strings related to homePage-->
    <string name="title_activity_main_page">Home</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>

    <!-- Strings related to fightPage -->
    <string name="title_activity_fight">FightActivity</string>
    <string name="start_fight">Fight !</string>

    <!-- Strings related to network -->
    <string name="generic_server_down">The server is down</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="generic_error">An error occured</string>
    <string name="spash">Spash</string>
    <string name="background">background</string>
</resources>
